--- a/Celender/Celender/Celender.csproj
+++ b/Celender/Celender/Celender.csproj
@@ -57,11 +57,19 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="advance caleder .aspx" />
     <Content Include="image\calendar-512.png" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="advance caleder .aspx.cs">
+      <DependentUpon>advance caleder .aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="advance caleder .aspx.designer.cs">
+      <DependentUpon>advance caleder .aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
