adding all type of validation in asp.net

--- a/validation/validation/validation.csproj
+++ b/validation/validation/validation.csproj
@@ -60,6 +60,9 @@
     <Content Include="44part.aspx" />
     <Content Include="45part.aspx" />
     <Content Include="46part.aspx" />
+    <Content Include="customvalidation48.aspx" />
+    <Content Include="RegulerEXpression47.aspx" />
+    <Content Include="Summary.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -84,7 +87,28 @@
     <Compile Include="46part.aspx.designer.cs">
       <DependentUpon>46part.aspx</DependentUpon>
     </Compile>
+    <Compile Include="customvalidation48.aspx.cs">
+      <DependentUpon>customvalidation48.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="customvalidation48.aspx.designer.cs">
+      <DependentUpon>customvalidation48.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegulerEXpression47.aspx.cs">
+      <DependentUpon>RegulerEXpression47.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegulerEXpression47.aspx.designer.cs">
+      <DependentUpon>RegulerEXpression47.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Summary.aspx.cs">
+      <DependentUpon>Summary.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Summary.aspx.designer.cs">
+      <DependentUpon>Summary.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
